--- a/codegen.yml
+++ b/codegen.yml
@@ -1,11 +1,10 @@
 overwrite: true
 schema: "https://spacexdata.herokuapp.com/graphql"
-documents: "./src/components/**/*.{ts.tsx}"
+documents: "./src/components/**/*.{ts,tsx}"
 generates:
   src/generated/graphql.tsx:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
-      confiq:
-        withHooks:true
+    config: withHooks:true
