--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-player": "^2.7.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
