--- a/.github/workflows/space.yml
+++ b/.github/workflows/space.yml
@@ -42,4 +42,4 @@ jobs:
         run: npm install --global surge
 
       - name: Deploy to Surge
-        run: surge ./build project8-spacex.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build project8-spacex8.surge.sh --token ${{ secrets.SURGE_TOKEN }}
